<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">DD记账</string>
    <string name="app_slogan">DD记账、记录生活点点滴滴</string>
    <string name="navigation_drawer_open">打开抽屉式导航栏</string>
    <string name="navigation_drawer_close">关闭抽屉式导航栏</string>
    <string name="save">确定</string>
    <string name="save_success">保存成功</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="delete_success">删除成功</string>
    <string name="back">返回</string>
    <string name="error">错误</string>
    <string name="tip">提示</string>
    <string name="tip_update">版本更新&#160;</string>
    <string name="err_msg_unkown">未知错误</string>
    <string name="err_msg_malformed">URL异常</string>
    <string name="err_msg_json">JSON数据错误</string>
    <string name="err_msg_timeout">服务器连接超时</string>
    <string name="err_msg_eof">异常的输出、请检查请求数据</string>
    <string name="err_msg_client_protocl">交给服务器的请求不符合HTTP协议</string>
    <string name="err_msg_io">服务器开小差了、请稍后重试</string>
    <string name="err_msg_socket">服务器离家出走了、请稍后重试</string>
    <string name="permissions_set_hint">当前操作需要申请权限【%1$s】,请在设置中授予权限</string>
    <string name="no_more">-- 别扯了、到底了 --</string>
    <string name="no_data">这里空空如也</string>
    <string name="action_settings">设置</string>
    <string name="action_home_list">列表模式</string>
    <string name="title_activity_login">登录</string>
    <string name="nav_money">记账本</string>
    <string name="nav_moneyv2">账本</string>
    <string name="nav_report">图表</string>
    <string name="nav_wallet">钱包</string>
    <string name="nav_discovery">发现</string>
    <string name="nav_profile">个人中心</string>
    <string name="nav_profilev2">我的</string>
    <string name="nav_record">记账</string>
    <string name="nav_set">设置</string>
    <string name="nav_more">更多工具</string>
    <string name="nav_share">晒账单</string>
    <string name="nav_vip">我的VIP</string>
    <string name="nav_expexcel">导出账单</string>
    <string name="nav_export">导出</string>
    <string name="money_line_loading">玩命加载中&#8230;</string>
    <string name="pull_to_refresh_pull_label_synchronize">下拉开始同步&#8230;</string>
    <string name="pull_to_refresh_release_label_synchronize">释放开始同步&#8230;</string>
    <string name="pull_to_refresh_refreshing_label_synchronize">正在同步&#8230;</string>
    <string name="synchronize_done">条账目已同步到云端</string>
    <string name="synchronize_done_tip">所有账目已同步云端</string>
    <string name="synchronize_tip">开启云端同步需要先登录哦</string>
    <string name="show_synchronize_tip">开启云端同步确保账本安全？</string>
    <string name="show_score_tip">DD记账用得还顺手吗？吐槽一下吧！</string>
    <string name="app_loading_more">正在加载&#8230;</string>
    <string name="share_image_tip">请先切换到报表界面</string>
    <string name="share_report_tip">晒账单</string>
    <string name="share_report_month">更多</string>
    <string name="delete_income_tip">确定要删除记录吗？</string>
    <string name="budget_month">月预算</string>
    <string name="budget_month_set">设置预算</string>
    <string name="budget_month_last">可消费</string>
    <string name="budget_year">年</string>
    <string name="budget_month_str">月</string>
    <string name="rmb">￥</string>
    <string name="home_network_tip">当前设备网络异常，是否前往设置？</string>
    <string name="home_scan_error_tip">扫单初始化失败，请检查网络环境后再重试</string>
    <string name="copyright">&#169; COPYRIGHT 2015&#8211;2022.SHINYUU ALL RIGHTS RESERVED.</string>
    <string name="home_record_quick">快速记账</string>
    <string name="home_record_scan">扫描小票</string>
    <string name="home_record_scan_beta">Beta</string>
    <string name="home_record_detail">精准查账</string>
    <string name="home_privacy_useragreement">DD记账服务协议与隐私政策</string>
    <string name="home_privacy">隐私政策</string>
    <string name="home_useragreement">服务协议</string>
    <string name="home_privacy_ok">同意</string>
    <string name="home_privacy_cancel">不同意</string>
    <string name="home_privacy_content">感谢您使用DD记账APP，在您使用本软件的过程中，我们可能会对您的部分个人信息进行收集、使用和共享。请您仔细阅读《服务协议》和《隐私政策》，并确定完全了解我们对您个人信息的处理规则。如您同意《服务协议》和《隐私政策》，请点击“同意“开始使用DD记账，我们会尽全力保护您的个人信息安全。</string>
    <string name="record_add">记一笔</string>
    <string name="record_income">收入</string>
    <string name="record_pay">支出</string>
    <string name="record_all_income">共收入</string>
    <string name="record_all_pay">共支出</string>
    <string name="record_income_all">收入</string>
    <string name="record_pay_all">支出</string>
    <string name="record_info_all">概况</string>
    <string name="record_account">0.00</string>
    <string name="record_zhichu_type_yian">一般</string>
    <string name="account_type_title">钱包/账户</string>
    <string name="record_input_1">1</string>
    <string name="record_input_2">2</string>
    <string name="record_input_3">3</string>
    <string name="record_input_4">4</string>
    <string name="record_input_5">5</string>
    <string name="record_input_6">6</string>
    <string name="record_input_7">7</string>
    <string name="record_input_8">8</string>
    <string name="record_input_9">9</string>
    <string name="record_input_0">0</string>
    <string name="record_input_c">C</string>
    <string name="record_input_add">十</string>
    <string name="record_input_subtract">一</string>
    <string name="record_input_point">.</string>
    <string name="record_input_back">&#xe7a9;</string>
    <string name="record_remark">备注</string>
    <string name="record_money_error">金额必须输入哦！</string>
    <string name="record_shouru_type_gongzi">工资</string>
    <string name="money_line_tip">记一笔吧</string>
    <string name="money_line_start_tip">终于等到您开始使用DD记账啦</string>
    <string name="report_all">更多报表</string>
    <string name="report_all_pro">报表分析</string>
    <string name="report_paying_pie">支出</string>
    <string name="report_paying_pie_text">支出饼图</string>
    <string name="report_income_pie">收入饼图</string>
    <string name="report_paying_line">趋势</string>
    <string name="report_paying_line_text">收支趋势</string>
    <string name="report_income_bar">纯收入趋势图</string>
    <string name="report_paying_pie_title">支出</string>
    <string name="report_income_pie_title">收入</string>
    <string name="report_paying_line_title">收/支</string>
    <string name="report_income_bar_title">纯收入</string>
    <string name="report_line">－</string>
    <string name="report_date_error_ago">开始时间必须在结束时间之前</string>
    <string name="report_date_select">请选择月份</string>
    <string name="action_sign_qq">QQ登录</string>
    <string name="action_sign_weibo">微博登录</string>
    <string name="action_login_tis">社交帐号直接登录DD记账</string>
    <string name="insert_card">下载文件失败，请检查权限或从应用市场更新</string>
    <string name="down_fail">下载失败</string>
    <string name="is_downing">正在下载</string>
    <string name="down_sucess">下载成功，点击安装！</string>
    <string name="version_name">版本：V</string>
    <string name="title_activity_profile">个人中心</string>
    <string name="title_activity_profile_info">个人信息</string>
    <string name="profile_theme">主题颜色</string>
    <string name="profile_accent">高亮颜色</string>
    <string name="color_palette">请选择主题色</string>
    <string name="profile_type_income">收入类别</string>
    <string name="profile_type_pay">支出类别</string>
    <string name="profile_budget">月预算</string>
    <string name="profile_budget_edit">编辑预算</string>
    <string name="profile_account">钱包/账户</string>
    <string name="profile_data">数据恢复</string>
    <string name="profile_data_success">所有数据已经恢复到本机</string>
    <string name="reset_pass">帐号邦定</string>
    <string name="clear_cache">清空缓存</string>
    <string name="clear_cache_tip">是否要清空缓存？</string>
    <string name="profile_data_tip">此功能用于重装DD记账后数据恢复、是否要继续？</string>
    <string name="clear_cache_text">0.0KB</string>
    <string name="clear_success">成功清空缓存</string>
    <string name="setup_score">去评分</string>
    <string name="update">版本更新</string>
    <string name="user_agreement">DD记账</string>
    <string name="message_recommendation">意见反馈</string>
    <string name="share_app">分享App</string>
    <string name="share_text">分享</string>
    <string name="about_me">关于我们</string>
    <string name="contact_me">联系我们</string>
    <string name="contact_me_weixin">微信号:shinyuuHub</string>
    <string name="profile_login">请登录</string>
    <string name="profile_login_sess">登录成功</string>
    <string name="profile_login_out">退出当前帐号</string>
    <string name="profile_setup_password">修改密码</string>
    <string name="profile_setup_phone">更换手机号</string>
    <string name="profile_setup_username">用户名设置</string>
    <string name="profile_setup_scan">扫单模式</string>
    <string name="profile_setup_scan_tip">关闭可直接进入快速记账</string>
    <string name="profile_fingerprint">指纹认证</string>
    <string name="profile_fingerprint_tis">进入App先指纹认证</string>
    <string name="fingerprint_not_recognized">指纹无法识别，请再试一次！</string>
    <string name="fingerprint_hint">请识别你的指纹</string>
    <string name="fingerprint_success">指纹识别</string>
    <string name="fingerprint_not_support">未适配当前设备指纹识别</string>
    <string name="fingerprint_not_support_one">请至少录入一个指纹</string>
    <string name="fingerprint_not_support_login">为保证指纹失效密码验证，请先登录！</string>
    <string name="fingerprint_main_user">尚未登录</string>
    <string name="fingerprint_main_tip">点击进行指纹解锁</string>
    <string name="fingerprint_description">认证指纹以继续操作</string>
    <string name="fingerprint_description_userpass">账号认证</string>
    <string name="fingerprint_description_userpass_sess">账号认证成功</string>
    <string name="fingerprint_description_userpass_tip">认证账号以继续操作</string>
    <string name="fingerprint_description_null_tip">当前设备指纹模块异常</string>
    <string name="md_custom_label">自定义</string>
    <string name="md_presets_label">预置</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_account">钱包/账户</string>
    <string name="account_money">设置金额</string>
    <string name="account_update">编辑账户</string>
    <string name="account_image">账户图标</string>
    <string name="title_activity_income_lis">明细</string>
    <string name="title_activity_income_lis_more">更多</string>
    <string name="title_activity_income_detail">收支明细</string>
    <string-array name="income_detail_mode">
        <item>编辑小票扫单</item>
        <item>编辑消费账单</item>
    </string-array>
    <string name="profile_type_add_str">添加</string>
    <string name="profile_type_add">添加类别</string>
    <string name="profile_type_update">类别修改</string>
    <string name="profile_type_add_sess">添加类别成功</string>
    <string name="profile_type_update_sess">类别修改成功</string>
    <string name="profile_type_delete_sess">类别删除成功</string>
    <string name="profile_type_tip">系统类别不能改哦、长按可排序哦</string>
    <string name="profile_type_name">名称</string>
    <string name="profile_type_name_tip">请输入类别名称</string>
    <string name="profile_type_remark">备注</string>
    <string name="profile_type_remark_tip">请输入备注</string>
    <string name="profile_type_color_tip">类别使用图标预置颜色</string>
    <string name="profile_type_add_tip">普通用户免费添加20个类别，是否开通VIP继续添加？</string>
    <string name="title_activity_add_account">添加账户</string>
    <string name="title_activity_add_account_sess">添加账户成功</string>
    <string name="title_activity_update_account_sess">编辑账户成功</string>
    <string name="title_activity_delete_account_sess">账户删除成功</string>
    <string name="add_account_moneysum">金额</string>
    <string name="add_account_image">图标</string>
    <string name="add_account_color">颜色</string>
    <string name="register_username_text">手机号</string>
    <string name="register_user_smscode_text">短信验证码</string>
    <string name="register_user_smscode_btn">获取验证码</string>
    <string name="register">快速注册</string>
    <string name="register_username">跳过</string>
    <string name="register_password_text">设置密码</string>
    <string name="register_password_text_config">确认密码</string>
    <string name="register_btn">快速注册</string>
    <string name="register_by_username">不绑定手机号</string>
    <string name="profile_phone">绑定手机号</string>
    <string name="profile_phone_bind">绑定手机号</string>
</resources>