<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.dwtedx.income.widget.AppTitleBar
            android:id="@+id/m_app_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:left_btn_text="@string/back"
            app:left_btn_visible="true"
            app:right_btn_text="@string/delete"
            app:right_btn_visible="true"
            app:text="@string/profile_type_add" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/common_color_white"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".account.AddAccountActivity"
        tools:showIn="@layout/activity_add_account">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin">

            <TextView
                style="@style/common_text_style_14_737373"
                android:text="@string/profile_type_name" />

            <EditText
                android:id="@+id/m_type_name"
                style="@style/common_text_style_14_333333"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="4"
                android:background="@android:color/transparent"
                android:hint="@string/profile_type_name_tip"
                android:padding="@dimen/activity_vertical_margin" />

        </LinearLayout>

        <LinearLayout style="@style/common_horizontal_division_line_style" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/add_type_lable_layout"
                style="@style/common_text_style_14_737373"
                android:padding="@dimen/activity_vertical_margin"
                android:text="@string/add_account_image" />

            <LinearLayout
                android:id="@+id/m_add_type_image_layout"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/add_type_lable_layout"
                android:layout_toEndOf="@+id/add_type_lable_layout"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/m_type_diy_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerInside"
                    android:src="@mipmap/icon_zhichu_type_diy" />

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/forward"
                android:tint="@color/common_body_tip_colors" />

        </RelativeLayout>

        <LinearLayout style="@style/common_horizontal_division_line_style" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/activity_vertical_margin">

            <TextView
                style="@style/common_text_style_14_737373"
                android:padding="@dimen/activity_vertical_margin"
                android:text="@string/add_account_color" />

            <LinearLayout
                android:id="@+id/m_add_type_color_layout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/common_margin_6dp"
                android:paddingBottom="@dimen/common_margin_6dp">

                <TextView
                    android:id="@+id/m_add_type_color"
                    style="@style/common_text_style_14_333333"
                    android:layout_width="@dimen/common_margin_50dp"
                    android:layout_height="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_vertical_margin" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/common_horizontal_division_line_style" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin">

            <TextView
                style="@style/common_text_style_14_737373"
                android:text="@string/profile_type_remark" />

            <EditText
                android:id="@+id/m_type_remark"
                style="@style/common_text_style_14_333333"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="20"
                android:background="@android:color/transparent"
                android:hint="@string/profile_type_remark_tip"
                android:padding="@dimen/activity_vertical_margin" />

        </LinearLayout>

        <LinearLayout style="@style/common_horizontal_division_line_style" />

        <Button
            android:id="@+id/m_save_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_margin_50dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/button_bg"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
