<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".home.IncomeListActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.dwtedx.income.widget.AppTitleBar
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:left_btn_text="@string/back"
            app:left_btn_visible="true"
            app:right_btn_visible="true"
            app:right_btn_text="@string/title_activity_income_lis_more"
            app:text="@string/title_activity_income_lis" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.handmark.pulltorefresh.library.PullToRefreshListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/common_background_color"
            android:dividerHeight="0.5dp"
            app:ptrAnimationStyle="flip"
            app:ptrDrawableEnd="@mipmap/pulltorefresh_arrow"
            app:ptrDrawableStart="@mipmap/pulltorefresh_arrow"
            app:ptrHeaderSubTextColor="@color/common_body_tip_color"
            app:ptrHeaderTextColor="@color/common_body_tip_color"
            app:ptrMode="both" />

        <TextView
            android:id="@+id/listView_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:drawableTop="@mipmap/income_paying_tip"
            android:drawablePadding="@dimen/common_margin_4dp"
            android:gravity="center_horizontal"
            android:text="@string/money_line_tip"
            android:textColor="@color/common_body_tip_colors"
            android:textSize="@dimen/common_text_size_16sp"
            android:visibility="gone" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
